Сверстанная шапака и почти сверстанный левый сайдбар.

--- a/css/main.css
+++ b/css/main.css
@@ -1,198 +1,1 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
-
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-textarea {
-    resize: vertical;
-}
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-
-}
-
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */html{color:#222;font-size:1em;line-height:1.4}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}audio,canvas,iframe,img,svg,video{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.browserupgrade{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}.container940{width:940px;margin:0 auto}.header{background:url(../img/header-bg.jpg) repeat-x #9A9A9A center center;height:168px}.header .logo-wrapper{margin-right:20px;float:left;width:220px;margin-top:32px}.header .info-wrapper{float:right;width:700px}.header .info-wrapper .top-menu{margin-top:20px}.header .info-wrapper .top-menu .top___menu__list{margin:0;padding:0}.header .info-wrapper .top-menu .top___menu__list li{display:inline-block}.header .info-wrapper .top-menu .top___menu__list .menu__separator{color:#fff;font-size:15px;font-family:tahoma;padding:0 5px}.header .info-wrapper .top-menu .top___menu__list .top__menu__link{color:#fff;font-size:15px;font-family:tahoma;text-decoration:none}.header .info-wrapper .top-menu .top___menu__list .top__menu__link:hover{text-decoration:underline}.header .info-wrapper .header-phone{float:right;clear:both;padding:10px 0}.header .info-wrapper .header-phone .phone__number{color:#fff;font-family:tahoma;font-weight:700;font-size:30px;background:-webkit-linear-gradient(#fff,#efefeb);background:-o-linear-gradient(#fff,#efefeb);background:linear-gradient(#fff,#efefeb);-webkit-background-clip:text;-webkit-text-fill-color:transparent}.header .info-wrapper .header-nav-buttons{overflow:hidden;clear:both;padding:12px 0}.header .info-wrapper .header-nav-buttons .orange__btn{background:url(../img/orange__btn.png);width:229px;height:43px;float:left;margin-right:6px;text-align:center;color:#fff;font-family:tahoma;font-size:16px;text-decoration:none;text-transform:uppercase;line-height:2.4}.main-contaier .left-sidebar{width:220px;margin-right:20px;float:left}.main-contaier .left-sidebar .left-menu-wrapper{background:#b7b7b7 no-repeat;position:relative;padding-bottom:30px}.main-contaier .left-sidebar .left-menu-wrapper:before{content:"";background:url(../img/left-sidebar-bg.png) no-repeat;width:220px;height:200px;position:absolute;top:120px;opacity:.2}.main-contaier .left-sidebar .left-menu-wrapper:after{content:"";background:url(../img/left-sidebar-bg-angle.jpg) no-repeat;width:220px;height:33px;position:absolute;bottom:0}.main-contaier .left-sidebar .left-menu-wrapper .title{background:url(../img/left-sidebar-orange-title.png) #fff;width:220px;height:36px;font-size:16px;font-family:tahoma;text-align:center;color:#fff;text-transform:uppercase;font-weight:400;line-height:2.2}.main-contaier .left-sidebar .left-menu-wrapper .left-menu-list{padding:0;margin:0;list-style:none;padding-left:20px}.main-contaier .left-sidebar .left-menu-wrapper .left-menu-list .left-menu__item{padding-bottom:5px}.main-contaier .left-sidebar .left-menu-wrapper .left-menu-list .left-menu__item .left__menu__link{font-family:tahoma;font-size:14px;text-decoration:none;color:#000;line-height:1}.main-contaier .left-sidebar .left-menu-wrapper .left-menu-list .left-menu__item .left__menu__link:hover{color:#ef7d1a;text-decoration:underline}.main-contaier .left-sidebar .grey--title{font-size:18px;font-family:tahoma;text-align:left;color:#777;text-transform:uppercase;font-weight:400}.main-contaier .left-sidebar .calculators-wrapper .calculators-item{width:218px;height:34px;border:1px solid #efefef;border-radius:5px;background:#fff;position:relative;margin-bottom:20px;-webkit-box-shadow:1px 2px 2px 0 rgba(0,0,0,.4);-moz-box-shadow:1px 2px 2px 0 rgba(0,0,0,.4);box-shadow:1px 2px 2px 0 rgba(0,0,0,.4)}.main-contaier .left-sidebar .calculators-wrapper .calculators-item:after{content:"";background:url(../img/calc-icon.png) no-repeat;width:21px;height:29px;position:absolute;top:2px;right:10px}.main-contaier .left-sidebar .calculators-wrapper .calculators-item .calculstor__link{color:#777;font-family:tahoma;font-size:14px;text-align:left;text-decoration:none;padding-left:10px;line-height:2.5;display:block;position:relative;z-index:1}.main-contaier .left-sidebar .news-wrapper{margin-bottom:20px}.main-contaier .left-sidebar .news-wrapper .news-item{overflow:hidden;margin-bottom:20px}.main-contaier .left-sidebar .news-wrapper .news-item .news-info{float:left}.main-contaier .left-sidebar .news-wrapper .news-item .news-info .news-photo-wrapper{border-radius:5px;overflow:hidden;-webkit-box-shadow:1px 2px 2px 0 rgba(0,0,0,.4);-moz-box-shadow:1px 2px 2px 0 rgba(0,0,0,.4);box-shadow:1px 2px 2px 0 rgba(0,0,0,.4);width:58px;height:46px;border:1px solid #efefef}.main-contaier .left-sidebar .news-wrapper .news-item .news-info .news__date{color:#777;font-family:tahoma;font-size:12px;margin-top:10px}.main-contaier .left-sidebar .news-wrapper .news-item .news-info .news__title__link{color:#777;font-family:tahoma;font-size:12px;text-align:left}.main-contaier .left-sidebar .news-wrapper .news-item .news-info .news__title__link:hover{color:#ff6d00}.main-contaier .left-sidebar .news-wrapper .news-item .news__title__link{float:right;display:block;width:140px;font-family:tahoma;color:#777;font-size:12px;text-decoration:none}.main-contaier .left-sidebar .news-wrapper .news-item .news__title__link:hover{text-decoration:underline}.main-contaier .left-sidebar .news-wrapper .more__link{float:right;color:#ff6d00;font-family:tahoma;font-size:12px;text-decoration:none}.main-contaier .left-sidebar .news-wrapper .more__link:hover{text-decoration:underline}.main-contaier .right-content-area{width:700px;float:right}.header .info-wrapper .header-nav-buttons .orange__btn.no--margin{margin-right:0}.hidden{display:none!important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix:after,.clearfix:before{content:" ";display:table}.clearfix:after{clear:both}@media print{*,:after,:before{background:0 0!important;color:#000!important;box-shadow:none!important;text-shadow:none!important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}a[href^="#"]:after,a[href^="javascript:"]:after{content:""}blockquote,pre{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}img,tr{page-break-inside:avoid}img{max-width:100%!important}h2,h3,p{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
