--- a/css/main.less
+++ b/css/main.less
@@ -454,6 +454,39 @@ textarea {
                 }
             }
         }
+
+        /* Разделы товаров на главной */
+        .goods {
+            margin-top: 20px;
+            .goods-item {
+                width: 220px;
+                margin-right: 20px;
+                text-align: center;
+                float: left;
+                margin-bottom: 20px;
+                &:nth-child(3n+3) {
+                    margin-right: 0px;
+                }
+                .item-photo {
+                    border-radius: 5px;
+                    margin-bottom: 15px;
+                    overflow: hidden;
+                    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                }
+                .item__title__link {
+                    text-decoration: none;
+                    color: #777777;
+                    font-size: 14px;
+                    font-family: @tahoma;
+                    padding-top: 25px;
+                    &:hover {
+                        text-decoration: underline;
+                        color: #ef7d1a;
+                    }
+                }
+            }
+        }
+        
     }
 }
 
