--- a/css/main.less
+++ b/css/main.less
@@ -1,9 +1,15 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
+body {
+    background: url("../img/bg-img.png") no-repeat #fff;
+    background-position: 100% 100%;
+}
+
 html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
+    font-family: "Tahoma";
 }
 
 ::-moz-selection {
@@ -202,8 +208,14 @@ textarea {
 
         .left-menu-wrapper {
             position: relative;
+            /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#727270+1,e1e1e1+34,e1e1e1+60,666666+100 */
+            background: #727270; /* Old browsers */
+            background: -moz-linear-gradient(45deg,  #727270 1%, #e1e1e1 34%, #e1e1e1 60%, #666666 100%); /* FF3.6-15 */
+            background: -webkit-linear-gradient(45deg,  #727270 1%,#e1e1e1 34%,#e1e1e1 60%,#666666 100%); /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(45deg,  #727270 1%,#e1e1e1 34%,#e1e1e1 60%,#666666 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#727270', endColorstr='#666666',GradientType=1 );
             padding-bottom: 30px;
-            background: #b7b7b7 no-repeat;
+            border-radius: 0px 0px 5px 5px; /* IE6-9 fallback on horizontal gradient */
             &:before {
                 content: "";
                 background: url("../img/left-sidebar-bg.png") no-repeat;
@@ -214,15 +226,14 @@ textarea {
                 opacity: 0.2;
                 z-index: 0;
             }
-            &:after {
-                content: "";
-                background: url("../img/left-sidebar-bg-angle.jpg") no-repeat;
-                width: 220px;
-                height: 33px;
-                position: absolute;
-                bottom: 0px;
-
-            }
+            // &:after {
+            //     content: "";
+            //     background: url("../img/left-sidebar-bg-angle.jpg") no-repeat;
+            //     width: 220px;
+            //     height: 33px;
+            //     position: absolute;
+            //     bottom: 0px;
+            // }
             .title {
                 width: 220px;
                 height: 36px;
@@ -397,6 +408,17 @@ textarea {
     .right-content-area {
         width: 700px;
         float: right;
+
+        h2, h3, h4 {
+            color: #ff6d00;
+            font-weight: normal;
+            text-transform: uppercase;
+            font-size: 18px;
+        }
+
+        p {
+            color: #777777;
+        }
         /* Баннер */
         .content-banner {
             border-radius: 5px;
@@ -485,6 +507,55 @@ textarea {
                     }
                 }
             }
+        }
+        /* Преимущества */
+        .advantages {
+            width: 700px;
+            .drop-shadow-real;
+            border-radius: 0px 8px 5px 5px;
+            overflow: hidden;
+            .advantages-title {
+                background: url("../img/advantages-title.png");
+                color: #ffffff;
+                text-align: center;
+                font-family: @tahoma;
+                font-size: 18px;
+                text-transform: uppercase;
+                width: auto;
+                height: 36px;
+                line-height: 2;
+            }
+            .advantages-content {
+                /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#727270+1,e1e1e1+34,e1e1e1+60,666666+100 */
+                background: #727270; /* Old browsers */
+                background: -moz-linear-gradient(45deg,  #727270 1%, #e1e1e1 34%, #e1e1e1 60%, #666666 100%); /* FF3.6-15 */
+                background: -webkit-linear-gradient(45deg,  #727270 1%,#e1e1e1 34%,#e1e1e1 60%,#666666 100%); /* Chrome10-25,Safari5.1-6 */
+                background: linear-gradient(45deg,  #727270 1%,#e1e1e1 34%,#e1e1e1 60%,#666666 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#727270', endColorstr='#666666',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+                padding-bottom: 0px;
+                /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#727270+1,e1e1e1+34,e1e1e1+60,666666+100 */
+                padding-top: 20px;
+            }
+
+            .advantages-item {
+                width: 200px;
+                text-align: center;
+                font-family: @tahoma;
+                font-size: 14px;
+                float: left;
+                margin: 0 16px;
+                .item__title {
+                    color: #ff6d00;
+                    margin-top: 15px;
+                    text-shadow: 0px 0px 1px #000000;
+                    font-size: 16px;
+                }
+                .item__text {
+                    color: #000;;
+                }
+            }
+            box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.4);
+            -webkit-box-shadow: 1px 2px 2px 0 rgba(0,0,0,.4);
         }
         
     }
