--- a/css/main.less
+++ b/css/main.less
@@ -67,6 +67,7 @@ textarea {
 .container940 {
     width: 940px;
     margin: 0 auto;
+    padding-bottom: 20px;
 }
 
 @white: #fff;
@@ -557,13 +558,150 @@ textarea {
             box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.4);
             -webkit-box-shadow: 1px 2px 2px 0 rgba(0,0,0,.4);
         }
-        
     }
 }
 
 
 /*=====  End of Главная область  ======*/
 
+/* Форма большая */
+.big-form {
+    background: rgba(255, 255, 255, 0.7);
+    margin-bottom: 25px;
+    padding-bottom: 20px;
+    h2, h3, h4 {
+        color: #ff6d00;
+        font-weight: normal;
+        text-transform: uppercase;
+        font-size: 18px;
+    }
+
+    p {
+        color: #777777;
+        font-size: 14px;
+        line-height: 1.8;
+    }
+    .bf-content {
+        width: 700px;
+        float: right;
+
+        .left-contacts {
+            float: left;
+            width: 300px;
+            margin-right: 20px;
+            /* Сотрудники в большой форме */
+            .contacts-person {
+                margin-bottom: 20px;
+                .contact-photo {
+                    border-radius: 5px;
+                    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                    float: left;
+                    margin-right: 20px;
+                    overflow: hidden;
+                }
+
+                .contact-info {
+                        font-family: @tahoma;
+                        text-align: left;
+                        float: left;
+                    .person__name {
+                        color: #ff6d00;
+                        font-size: 14px;
+                        margin-bottom: 15px;
+                    }
+
+                    .person__post {
+                        color: #777777;
+                        font-size: 12px;
+                        margin-bottom: 10px;
+                    }
+
+                    .person__email {
+                        color: #777777;
+                        font-size: 12px;
+
+                        a {
+                            color: #ff6d00;
+                            margin-top: 10px;
+                            display: block;;
+                        }
+                    }
+                }
+            }
+        }
+
+        .right-form {
+            float: left;
+            width: 380px;
+
+            .text__field {
+                height: 46px;
+                border-radius: 5px;
+                box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                border: none;
+                padding-left: 10px;
+            }
+
+            .name__field {
+                width: 210px;
+                margin-right: 15px;
+            }
+
+            .email__field {
+                width: 130px;
+            }
+
+            .phone__field {
+                margin-top: 25px;
+                width: 210px;
+                margin-right: 15px;
+            }
+
+            .get__req__btn {
+                background: url("../img/get__rec__btn.png") no-repeat;
+                width: 140px;
+                height: 48px;
+                border: none;
+                float: right;
+                margin-top: 25px;
+                box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                border-radius: 5px;
+                text-align: left;
+                padding-left: 10px;
+                font-size: 14px;   
+                font-family: @tahoma;
+            }
+
+            .comments__area {
+                width: 370px;
+                padding-left: 10px;
+                height: 110px;
+                box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                border-radius: 5px;
+                resize: none;
+                margin-top: 25px;
+                border: none;
+                padding-top: 10px;
+            }
+
+            .send__form__btn {
+                background: url("../img/orange__btn.png");
+                width: 229px;
+                height: 43px;
+                float: right;
+                text-align: center;
+                color: @white;
+                font-family: @tahoma;
+                font-size: 16px;
+                text-decoration: none;
+                text-transform: uppercase;
+                line-height: 2.4;
+                border: none;
+                margin-top: 20px;
+            }
+        }
+    }
+}
 
 
 
