--- a/css/main.less
+++ b/css/main.less
@@ -410,15 +410,77 @@ textarea {
         width: 700px;
         float: right;
 
-        h2, h3, h4 {
+        h1 {
             color: #ff6d00;
             font-weight: normal;
             text-transform: uppercase;
             font-size: 18px;
         }
 
+        h2 {
+            color: #ff6d00;
+            font-weight: normal;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+
+        h3, h4 {
+            color: #ff6d00;
+            font-weight: normal;
+            text-transform: uppercase;
+            font-size: 14px; 
+        }
+
         p {
             color: #777777;
+        }
+
+        a {
+            color: #ef7d1a;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
+
+        ul {
+            list-style-image: url(../img/list-point.png);
+            padding-left: 20px;
+
+            li {
+                margin-bottom: 10px;
+                color: #777777;
+            }
+        }
+
+        table {
+            border: 1px solid #ef7d1a;
+            text-align: center;
+            width: 100%;
+            margin-bottom: 20px;
+            th {
+                background: #ef7d1a;
+                color: #fff;
+                font-weight: normal;
+                padding: 10px 0;
+            }
+
+            tr {
+                padding: 20px 0;
+
+                td {
+                    padding: 10px 0;
+                    border: 1px solid #ef7d1a;
+                }
+
+                &:nth-child(even) {
+                    background: #dbdbdb;
+                }
+
+                &:hover {
+                    background: #fff;
+                }
+            }
         }
         /* Баннер */
         .content-banner {
@@ -433,6 +495,7 @@ textarea {
         /* Хлебные крошки и поиск */
         .breadcrumbs-and-search {
             margin-top: 10px;
+            margin-bottom: 20px;
             .breadcrumbs {
                 float: left;
                 width: 480px;
@@ -557,6 +620,71 @@ textarea {
             }
             box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.4);
             -webkit-box-shadow: 1px 2px 2px 0 rgba(0,0,0,.4);
+        }
+
+        /* Страница списка новостей */
+
+        .news-list {
+            .news-item {
+                margin-bottom: 20px;
+                .news-photo {
+                    width: 220px;
+                    float: left;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    margin-right: 20px;
+                    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                }
+
+                .news-info {
+                    color: #777777;
+                    font-size: 14px;
+                    .news__title {
+                        text-transform: uppercase;
+                        margin-bottom: 5px;
+                        display: block;
+                        margin-top: 5px;
+                    }
+                }
+                .news__more__link {
+                    float: right;
+                    margin-top: 20px;
+                }
+            }
+        }
+
+        /* Пагинация */
+        .pagination-wrapper {
+            float: right;
+            margin-top: 20px;
+            margin-bottom: 50px;
+            .pagination-list {
+            padding: 0px;
+            margin: 0px;
+                .pagination__item {
+                    display: inline-block;
+                    padding: 0 10px;
+                    color: #777777;
+
+                    &.active a {
+                        color: #ef7d1a;
+
+                        &:hover {
+                            text-decoration: none;
+                        }
+                    }
+
+                    .pagination__link {
+                        color: #777777;
+                        text-decoration: none;
+
+                        &:hover {
+                           color: #ef7d1a;
+                           text-decoration: underline; 
+                        }
+                    }
+                }
+            } 
         }
     }
 }
@@ -772,11 +900,12 @@ textarea {
             padding-top: 20px;
             font-size: 14px;
             color: #fff;
+            line-height: 1.8;
         }
 
         .developer {
             text-align: right;
-            padding-top: 60px;
+            padding-top: 45px;
             font-size: 14px;
             color: #fff;
 
@@ -833,6 +962,15 @@ textarea {
 
 
 /*=====  End of TO TOP  ======*/
+
+
+/*==========================================
+=            Текстовая страница            =
+==========================================*/
+
+
+
+/*=====  End of Текстовая страница  ======*/
 
 
 /* ==========================================================================
