--- a/css/main.less
+++ b/css/main.less
@@ -686,6 +686,57 @@ textarea {
                 }
             } 
         }
+
+        /* Каталог товаров */
+        .catalog-items {
+            margin-bottom: 0px;
+            .catalog-item {
+                float: left;
+                width: 160px;
+                text-align: center;
+                margin-right: 20px;
+                margin-bottom: 40px;
+                &:nth-child(4n+4) {
+                    margin-right: 0px;
+                }
+
+                .item-photo {
+                    border-radius: 5px;
+                    overflow: hidden;
+                    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                }
+
+                .item__title {
+                    text-transform: uppercase;
+                    padding-top: 10px;
+                }
+
+                .item__gost {
+                    color: #777777;
+                    font-size: 14px;
+                    padding: 10px 0px;
+                }
+
+                .item__price {
+                    color: #ef7d1a;
+                }
+
+                .item__btn__order {
+                    background: url("../img/orange__btn__2.png") no-repeat;
+                    width: 167px;
+                    height: 43px;
+                    color: #fff;
+                    text-align: center;
+                    font-size: 16px;
+                    display: block;
+                    text-decoration: none;
+                    line-height: 2;
+                    text-transform: uppercase;
+                    margin: 0 auto;
+                    margin-top: 10px;
+                }
+            }
+        }
     }
 }
 
