Страница кулькулятора сделана

--- a/css/main.less
+++ b/css/main.less
@@ -1015,13 +1015,67 @@ textarea {
 /*=====  End of TO TOP  ======*/
 
 
-/*==========================================
-=            Текстовая страница            =
-==========================================*/
+/*============================
+=            TABS            =
+============================*/
+
+.ui-tabs {
+    padding: 0px !important;
+    margin-bottom: 30px;
+}
+
+.ui-tabs-nav {
+    margin: 0px !important;
+    padding: 0px !important;
+    list-style-image: none !important;
+}
+
+.ui-tabs .ui-tabs-nav li {
+    background: url("../img/tab--normal.png") no-repeat;
+    text-align: center;
+    width: 233px;
+    height: 36px;
+    margin: 0!important;
+    padding: 0!important;
+    border-radius: 0px 5px 0px 0px;
+    outline: none;
+}
+
+.ui-tabs .ui-tabs-nav li.ui-tabs-active {
+    background: url("../img/tab--active.png") no-repeat;
+    outline: none;
+}
+
+.ui-tabs .ui-tabs-nav .ui-tabs-anchor {
+    padding: 0px;
+    float: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 2.5;
+    display: block;
+}
+
+.ui-tabs-panel {
+    padding: 0px !important;
+    padding-top: 20px !important;
+    padding-left: 10px !important;
+    .download__btn {
+        background: url("../img/orange__btn.png") no-repeat;
+        width: 229px;
+        height: 43px;
+        text-align: center;
+        color: #fff !important;
+        font-size: 16px;
+        line-height: 2.2;
+        display: block;
+        float: right;
+        text-decoration: none;
+    }
+}
 
 
-
-/*=====  End of Текстовая страница  ======*/
+/*=====  End of TABS  ======*/
 
 
 /* ==========================================================================
