--- a/css/main.less
+++ b/css/main.less
@@ -1,7 +1,7 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 body {
-    background: url("../img/bg-img.png") no-repeat #fff;
+    background: url("../img/bg-img.png") no-repeat #f9f9f9;
     background-position: 100% 100%;
 }
 
@@ -1060,6 +1060,9 @@ textarea {
     padding: 0px !important;
     padding-top: 20px !important;
     padding-left: 10px !important;
+    padding-bottom: 10px !important;
+    border-radius: 0px 0px 5px 5px;
+    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
     .download__btn {
         background: url("../img/orange__btn.png") no-repeat;
         width: 229px;
