Внесены корректировки по внутренним страницам (продолжение)

--- a/css/main.less
+++ b/css/main.less
@@ -135,7 +135,7 @@ textarea {
                     color: @white;
                     font-size: 15px;
                     font-family: @tahoma;
-                    padding: 0 5px;
+                    padding: 0 4px;
                 }
 
                 .top__menu__link {
@@ -162,7 +162,6 @@ textarea {
                 font-family: @tahoma;
                 font-weight: bold;
                 font-size: 30px;
-                .text--gradient(#fff, #efefeb);
             }
         }
         
@@ -745,7 +744,7 @@ textarea {
 
 /* Форма большая */
 .big-form {
-    background: rgba(255, 255, 255, 0.7);
+    // background: rgba(255, 255, 255, 0.7);
     margin-bottom: 25px;
     padding-bottom: 20px;
     h2, h3, h4 {
