--- a/css/main.less
+++ b/css/main.less
@@ -614,7 +614,7 @@ textarea {
                     font-size: 16px;
                 }
                 .item__text {
-                    color: #000;;
+                    color: #000;
                 }
             }
             box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.4);
@@ -736,6 +736,213 @@ textarea {
                 }
             }
         }
+
+        /* Карта товара */
+
+        .product-card {
+
+            .photo-gallery {
+                float: left;
+                width: 300px;
+                h1 {
+                    margin-top: 0px;
+                }
+
+                .product-price {
+                    font-size: 18px;
+                    color: #ef7d1a;
+                    text-align: center;
+                    margin-top: 20px;
+                    text-transform: uppercase;
+                }
+                #sync1 .item{
+                // padding: 80px 0px;
+                margin: 5px;
+                color: #ffffff;
+                -webkit-border-radius: 3px;
+                -moz-border-radius: 3px;
+                border-radius: 3px;
+                text-align: center;
+                width: 300px;
+                height: 216px;
+                
+                    img {
+                        max-width: 300px;
+                        max-height: 216px;
+                    }
+                }
+
+                #sync1 {
+                    border: 1px solid #e1e1e1;
+                    border-radius: 5px;
+                    margin-bottom: 20px;
+                }
+
+                #sync2 .item{
+                    color: #ffffff;
+                    -webkit-border-radius: 3px;
+                    -moz-border-radius: 3px;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    text-align: center;
+                    cursor: pointer;
+                    width: 80px;
+                    height: 65px;
+                    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                    margin: 5px;
+                    img {
+                      max-width: 80px;
+                      max-height: 65px;
+                      padding-top: 5px; 
+                    }
+                }
+                #sync2 {
+                    width: 265px;
+                    margin: 0 auto;
+                }
+            }
+
+            .form-req {
+                float: right;
+                width: 380px;
+                .title {
+                    background: url("../img/product-card-title.png") no-repeat;
+                    width: 380px;
+                    height: 36px;
+                    text-align: center;
+                    color: #ffffff;
+                    text-transform: uppercase;
+                    line-height: 2.2;
+                }
+                .right-form {
+                    position: relative;
+                    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#727270+1,e1e1e1+34,e1e1e1+60,666666+100 */
+                    background: #727270; /* Old browsers */
+                    background: -moz-linear-gradient(45deg,  #727270 1%, #e1e1e1 34%, #e1e1e1 60%, #666666 100%); /* FF3.6-15 */
+                    background: -webkit-linear-gradient(45deg,  #727270 1%,#e1e1e1 34%,#e1e1e1 60%,#666666 100%); /* Chrome10-25,Safari5.1-6 */
+                    background: linear-gradient(45deg, #727270 1%, #e1e1e1 34%, #e1e1e1 60%, #666666 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#727270', endColorstr='#666666',GradientType=1 );
+                    padding-bottom: 30px;
+                    border-radius: 0px 0px 5px 5px;
+                    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#727270+1,e1e1e1+34,e1e1e1+60,666666+100 */
+                    padding-top: 20px;
+                    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#727270+1,e1e1e1+34,e1e1e1+60,666666+100 */
+                    padding-left: 10px;
+                    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#727270+1,e1e1e1+34,e1e1e1+60,666666+100 */
+                    padding-right: 10px;
+                    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#727270+1,e1e1e1+34,e1e1e1+60,666666+100 */
+                    height: 365px; /* IE6-9 fallback on horizontal gradient */
+
+                    &:before {
+                        content: "";
+                        background: url("../img/left-sidebar-bg.png") no-repeat;
+                        position: absolute;
+                        left: 0px;
+                        top: 40px;
+                        width: 220px;
+                        height: 200px;
+                        z-index: 0;
+                    }
+
+                    p {
+                        color: #010101;
+                        font-size: 12px;
+                    }
+
+                    .text__field {
+                        height: 46px;
+                        border-radius: 5px;
+                        box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                        border: none;
+                        padding-left: 10px;
+                        position: relative;
+                        z-index: 1;
+                    }
+
+                    .name__field {
+                        width: 200px;
+                        margin-right: 5px;
+                    }
+
+                    .email__field {
+                        width: 130px;
+                        float: right;
+                    }
+
+                    .phone__field {
+                        margin-top: 15px;
+                        width: 200px;
+                        margin-right: 5px;
+                    }
+
+                    .get__req__btn {
+                        background: url("../img/get__rec__btn.png") no-repeat;
+                        width: 140px;
+                        height: 48px;
+                        border: none;
+                        float: right;
+                        margin-top: 15px;
+                        box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                        border-radius: 5px;
+                        text-align: left;
+                        padding-left: 10px;
+                        font-size: 14px;   
+                        font-family: @tahoma;
+                    }
+
+                    .comments__area {
+                        width: 348px;
+                        padding-left: 10px;
+                        height: 110px;
+                        box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.4);
+                        border-radius: 5px;
+                        resize: none;
+                        margin-top: 15px;
+                        border: none;
+                        padding-top: 10px;
+                        position: relative;
+                        z-index: 1;
+                    }
+
+                    .send__form__btn {
+                        width: 229px;
+                        height: 40px;
+                        float: right;
+                        text-align: center;
+                        color: @white;
+                        font-family: @tahoma;
+                        font-size: 16px;
+                        text-decoration: none;
+                        text-transform: uppercase;border:none;
+                        margin-top: 10px;
+                        background: url("../img/orange__btn.png") no-repeat;
+                    }
+                }
+            }
+        }
+
+        .order__btn {
+        background:url("../img/orange__btn__2.png") no-repeat;
+        width: 167px;
+        height: 43px;
+        text-decoration: none;
+        color: #fff;
+        text-align: center;
+        display: block;
+        font-size: 16px;
+        line-height: 2;
+        float: right;
+        margin-bottom: 20px;
+        }
+
+        /* Аналогичные товары */
+        .analog-items {
+            .catalog-item {
+                &:nth-child(5) {
+                    margin-right: 0px;
+                }
+            }
+        }
     }
 }
 
@@ -745,6 +952,7 @@ textarea {
 /* Форма большая */
 .big-form {
     // background: rgba(255, 255, 255, 0.7);
+    margin-top: 20px;
     margin-bottom: 25px;
     padding-bottom: 20px;
     h2, h3, h4 {
@@ -801,7 +1009,7 @@ textarea {
                         a {
                             color: #ff6d00;
                             margin-top: 10px;
-                            display: block;;
+                            display: block;
                         }
                     }
                 }
@@ -811,7 +1019,6 @@ textarea {
         .right-form {
             float: left;
             width: 380px;
-
             .text__field {
                 height: 46px;
                 border-radius: 5px;
@@ -822,7 +1029,7 @@ textarea {
 
             .name__field {
                 width: 210px;
-                margin-right: 15px;
+                float: right;
             }
 
             .email__field {
@@ -865,7 +1072,7 @@ textarea {
             .send__form__btn {
                 background: url("../img/orange__btn.png");
                 width: 229px;
-                height: 43px;
+                height: 40px;
                 float: right;
                 text-align: center;
                 color: @white;
@@ -916,6 +1123,10 @@ textarea {
         /* Нижнее меню */
         .bottom-menu {
             margin-top: 20px;
+            margin-top: 20px;
+            float: right;
+            clear: both;
+            margin-bottom: 20px;
             .bottom___menu__list {
                 margin: 0px;
                 padding: 0px;
@@ -928,7 +1139,7 @@ textarea {
                     color: @white;
                     font-size: 15px;
                     font-family: @tahoma;
-                    padding: 0 5px;
+                    padding: 0 4px;
                 }
 
                 .bottom__menu__link {
@@ -1080,6 +1291,8 @@ textarea {
 /*=====  End of TABS  ======*/
 
 
+
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
@@ -1217,6 +1430,5 @@ textarea {
 }
 
 
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
+
+
